<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_vertical_small"
    android:layout_marginStart="@dimen/margin_horizontal_small"
    android:layout_marginEnd="@dimen/margin_horizontal_small"
    android:layout_marginTop="@dimen/margin_vertical_small"
    card_view:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/default_product"
            android:scaleType="fitXY"
            android:layout_marginBottom="14dp"
            android:contentDescription="@string/app_name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/item_name"
            android:ellipsize="end"
            android:textSize="@dimen/product_title_txt_size"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/product_image"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_descriptions"
            android:ellipsize="end"
            android:textSize="@dimen/product_title_txt_size"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/product_name" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_default_price"
            android:ellipsize="end"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/product_description" />

        <ImageView
            android:id="@+id/btn_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/ic_shopping_cart_black_24dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/product_name"
            card_view:layout_constraintTop_toBottomOf="@+id/product_image"
            android:contentDescription="@string/add_to_cart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>