<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cart_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".view.activity.CartListActivity">

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text"
            android:hint="@string/address_details"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="9.5"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_items"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/checkout_progress"
            android:textColor="#848484"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30dp"
        android:background="@color/gen_black"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gen_white"
            android:text="@string/empty_item"
            android:textSize="14sp"
            android:textColor="@color/gen_black"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/btn_checkout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/payment_text"
            android:textSize="14sp"
            android:textColor="@color/gen_white"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <include
        android:id="@+id/layout_cart_empty"
        layout="@layout/empty_message_layout_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
