<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/iv_cart"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:src="@mipmap/default_product"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:id="@+id/layout_item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_cart_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_cart_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_xmedium"
                android:textColor="#4CAF50"
                android:layout_marginTop="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_cart_item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/remove_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_clear_black_18dp"/>

            <TextView
                android:id="@+id/text_action1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/remove_text"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="left"
                tools:ignore="NestedWeights,RtlHardcoded" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_mode_edit_black_18dp"/>

            <TextView
                android:id="@+id/text_action2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/shop_more_text"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="start"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
